<resources>
    <string name="app_name">AlerT</string>
    <string name="routes_page">My Routes</string>
    <string name="routes_search_page">Search Routes</string>
    <string name="create_alarm_page">New Alarm</string>

    <string name="route_list_empty">No routes to display yet</string>
    <string name="alarm_list_empty">No alarms saved yet</string>

    <string name="save_alarm_menu">Save Alarm Menu</string>

    <string-array name="weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="time">Time</string>

    <string name="nickname">Nickname</string>
    <string name="nickname_dialog_title">Alarm Name (optional)</string>
    <string name="nickname_default">New Alarm</string>

    <string name="repeat">Repeat</string>
    <string name="repeat_dialog_title">Set Repeat Type</string>
    <string name="repeat_custom_dialog_title">Select Custom Repeat</string>
    <string name="repeat_custom_invalid">At least one day must be selected for custom repeat.</string>

    <string name="duration">Duration</string>
    <string name="duration_dialog_title">Receive notifications for:</string>

    <string name="next_firing_time">Next firing time:</string>

    <string name="route">Route</string>
    <string name="route_default">Select a route…</string>
    <string name="route_dialog_title">Route Selection</string>
    <string name="route_dialog_default">Type a route…</string>
    <string name="route_invalid">A route selection is required.</string>

    <string name="direction">Direction</string>
    <string name="direction_default">Select a direction…</string>
    <string name="direction_dialog_title">Choose Direction</string>
    <string name="direction_invalid">A direction selection is required.</string>

    <string name="stop">Stop</string>
    <string name="stop_default">Select a stop…</string>
    <string name="stop_dialog_title">Stop Selection</string>
    <string name="stop_dialog_default">Type a stop…</string>
    <string name="stop_invalid">A stop selection is required.</string>

    <string name="endpoints">Endpoints</string>
    <string name="endpoints_default">Select endpoints…</string>
    <string name="endpoints_dialog_title">Select Endpoints</string>
    <string name="endpoints_invalid">At least one endpoint must be selected.</string>

    <string name="station">Station</string>
    <string name="directions">Directions</string>
    <string name="lines">Lines</string>
    <string name="create">Create</string>

    <string name="step_1">1) Choose Start Time</string>
    <string name="step_2">2) Select Days</string>
    <string name="step_3">3) Modify Settings</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>

    <string name="status">Status</string>

    <string name="add_route_dialog">Add the "%1$s" to your routes?</string>
    <string name="remove_route_dialog">Remove the "%1$s" from your routes?</string>

    <string name="add_alarm_dialog">Add "%1$s" to your alarms?</string>
    <string name="update_alarm_dialog">Update this alarm?</string>
    <string name="remove_alarm_dialog">Remove "%1$s" from your alarms?</string>

    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="fix">FIX</string>

</resources>
