<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="0"
    tools:context="com.jesseoberstein.alert.activities.alarm.EditAlarm">

    <TextView
        android:id="@+id/stepText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:elevation="3dp"
        android:layout_alignParentTop="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/step_1"
        android:textSize="16sp"/>

    <RelativeLayout
        android:id="@+id/stepper"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:padding="6dp"
        android:background="@color/orange_line">

        <TextView
            android:id="@+id/previous_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_chevron_left_white"
            android:visibility="invisible"/>

        <include layout="@layout/edit_alarm_steps"/>

        <TextView
            android:id="@+id/next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:drawableEnd="@drawable/ic_chevron_right_white"/>

        <TextView
            android:id="@+id/final_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/done"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="invisible"/>

    </RelativeLayout>
</RelativeLayout>
