<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingStart="@dimen/list_text_padding_start"
    android:paddingEnd="@dimen/list_text_padding_end"
    tools:context="com.jesseoberstein.alert.activities.alarm.CreateAlarm">

    <!-- Nickname -->
    <include layout="@layout/input_nickname"/>

    <!-- Station -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:completionThreshold="1"
            android:imeOptions="actionNext"
            android:hint="@string/station"
            android:layout_marginBottom="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/input_focus_holder"/>

    <!-- Directions -->
    <LinearLayout
        android:id="@+id/directions_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:paddingStart="6dp"
            android:layout_marginBottom="5dp"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/direction_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Lines -->
    <LinearLayout
        android:id="@+id/lines_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lines"
            android:paddingStart="6dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:id="@+id/line_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

    </LinearLayout>

    <!-- Endpoints -->
    <LinearLayout
        android:id="@+id/endpoints_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="@string/endpoints"
            android:layout_marginBottom="5dp"/>

        <GridView
            android:id="@+id/endpoint_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="2"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/create_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/create"/>

</LinearLayout>
