<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingStart="@dimen/list_text_padding_start"
    android:paddingEnd="@dimen/list_text_padding_end"
    tools:context="com.jesseoberstein.alert.activities.view.Routes">

    <!-- Nickname -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nickname"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:layout_marginBottom="10dp"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Station -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:completionThreshold="1"
            android:imeOptions="actionNext"
            android:hint="@string/station"
            android:layout_marginBottom="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/hiddenFocus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <!-- Direction -->
    <LinearLayout
        android:id="@+id/directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/create_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/create"/>

</LinearLayout>
